--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="personal-img">
                         <img src="./img/testimonial-2.jpg" alt="personal-image">
                     </div>
-                    <div class="personal-cap">
+                    <div class="personal-cap ps-4">
                         <p>
                             <span>Name:</span> Morgan Freeman<br>
 
