--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
         </nav>
         <!-- nav bar end -->
-        <div class="layer">
+        <div class="layer vh-100">
 
             <div class="home-cap">
                 <h2>I am Morgan Freeman</h2>
